# ssg-collection

./: .gitignore  0-AI-MANIFEST.a2ml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXPLAINME.adoc  Justfile  PROOF-NEEDS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  SECURITY.md  TEST-NEEDS.md  TOPOLOGY.md  deno.json  flake.nix  guix.scm  justfile  llm-warmup-dev.md  llm-warmup-user.md  setup.sh  stapeln.toml
.hypatia/: activity.jsonl  last-visit.json
.machine_readable/: ADJUST.contractile  CLADE.a2ml  ECOSYSTEM.a2ml  INTENT.contractile  MUST.contractile  TRUST.contractile
.well-known/: security.txt
docs/: architecture.adoc  contributing.adoc  tech-debt-2026-05-26.md  usage.adoc  (+1 more)
ssg-fixes/consensus-ssg/engine/: Cargo.toml
ssg-fixes/consensus-ssg/engine/src/: lib.rs
variants/macrauchenia/: .gitignore  0-AI-MANIFEST.a2ml  Justfile  README.adoc  SECURITY.md  dune-project  justfile
variants/macrauchenia/.github/: dependabot.yml
variants/macrauchenia/.github/workflows/: ci.yml  pages.yml  workflow-linter.yml
variants/macrauchenia/.machine_readable/: ECOSYSTEM.scm  NEUROSYM.scm  PLAYBOOK.scm
variants/macrauchenia/.machine_readable/6a2/: AGENTIC.a2ml  ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
variants/macrauchenia/content/: about.md  index.md
variants/macrauchenia/content/posts/: hello-world.md
variants/macrauchenia/src/: dune  macrauchenia_ssg.ml
variants/macrauchenia/tests/e2e/: workflow_test.js
variants/macrauchenia/tests/security/: validation_test.js
variants/macrauchenia/tests/unit/: adapter_test.js
(+1649 files in other folders)
