; SPDX-License-Identifier: AGPL-3.0-or-later

(lang dune 3.0)
(name macrauchenia_ssg)
(version 0.1.0)

(generate_opam_files true)

(source (github hyperpolymath/macrauchenia-ssg))
(license AGPL-3.0-or-later)
(authors "Jonathan D.A. Jewell")
(maintainers "jonathan@hyperpolymath.dev")

(package
  (name macrauchenia_ssg)
  (synopsis "OCaml-powered static site generator")
  (description "A static site generator showcasing OCaml's pattern matching and type system")
  (depends
    (ocaml (>= 4.14))
    (dune (>= 3.0))
    (cmdliner (>= 1.1.0))))
